argocd/istio-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "argocd.lab.local"
